# Vulkan-Skeletal-Animation-Example

./: .gitignore  CMakeLists.txt  Main.cpp
models/: Bot_Running.glb
models/Manny/: MM_Run_Fwd.gltf
shaders/: Compile.bat  Default.frag  Default.vert  DefaultFS.spv  DefaultVS.spv
